--- a/Speech_AD.ipynb
+++ b/Speech_AD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOyNJYHOfi7MElJ9GGTxnV",
+      "authorship_tag": "ABX9TyOP5k8QoVKHRKeWxnWzeKWq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2584,6 +2584,167 @@
             "    accuracy                           0.44         9\n",
             "   macro avg       0.45      0.45      0.44         9\n",
             "weighted avg       0.46      0.44      0.44         9\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.metrics import accuracy_score, classification_report\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.feature_selection import SelectFromModel\n",
+        "\n",
+        "# Load data\n",
+        "acoustic_df = pd.read_csv('/content/drive/MyDrive/Voice/task1_acoustic_features.csv')\n",
+        "linguistic_df = pd.read_csv('/content/drive/MyDrive/Voice/task1_linguistic_features.csv')\n",
+        "\n",
+        "# Merge features\n",
+        "merged_df = pd.merge(acoustic_df.drop(columns=['Dx']), linguistic_df, on='ID')\n",
+        "print(\"Merged features shape:\", merged_df.shape)\n",
+        "print(\"Dx distribution:\", merged_df['Dx'].value_counts())\n",
+        "\n",
+        "# Prepare features and labels\n",
+        "X = merged_df.drop(columns=['ID', 'Dx'])\n",
+        "y = merged_df['Dx'].map({'Control': 0, 'ProbableAD': 1})\n",
+        "\n",
+        "# Split data (20% test set)\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+        "\n",
+        "# Feature selection with Random Forest\n",
+        "scaler = StandardScaler()\n",
+        "rf_selector = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+        "selector = SelectFromModel(rf_selector, max_features=20)  # Select top 20 features\n",
+        "pipeline = Pipeline([\n",
+        "    ('scaler', scaler),\n",
+        "    ('selector', selector)\n",
+        "])\n",
+        "X_train_selected = pipeline.fit_transform(X_train, y_train)\n",
+        "X_test_selected = pipeline.transform(X_test)\n",
+        "print(\"Selected features shape:\", X_train_selected.shape)\n",
+        "\n",
+        "# SVM with Grid Search\n",
+        "svm = SVC(kernel='linear', class_weight='balanced', random_state=42)\n",
+        "svm_param_grid = {\n",
+        "    'C': [0.01, 0.1, 1, 10],\n",
+        "}\n",
+        "svm_grid = GridSearchCV(svm, svm_param_grid, cv=5, scoring='accuracy')\n",
+        "svm_grid.fit(X_train_selected, y_train)\n",
+        "print(\"Best SVM Parameters:\", svm_grid.best_params_)\n",
+        "print(\"Best SVM CV Score:\", svm_grid.best_score_)\n",
+        "\n",
+        "# Evaluate SVM\n",
+        "y_pred_svm = svm_grid.predict(X_test_selected)\n",
+        "print(\"SVM Test Accuracy:\", accuracy_score(y_test, y_pred_svm))\n",
+        "print(\"SVM Classification Report:\")\n",
+        "print(classification_report(y_test, y_pred_svm, target_names=['Control', 'ProbableAD']))\n",
+        "\n",
+        "# Cross-validation for SVM\n",
+        "svm_best = svm_grid.best_estimator_\n",
+        "svm_cv_scores = cross_val_score(svm_best, pipeline.transform(X), y, cv=5, scoring='accuracy')\n",
+        "print(\"SVM Cross-Validation Accuracy: Mean =\", svm_cv_scores.mean(), \"Std =\", svm_cv_scores.std())\n",
+        "\n",
+        "# Random Forest with Grid Search\n",
+        "rf = RandomForestClassifier(class_weight='balanced', random_state=42)\n",
+        "rf_param_grid = {\n",
+        "    'n_estimators': [50, 100],\n",
+        "    'max_depth': [None, 10],\n",
+        "    'min_samples_split': [2, 5]\n",
+        "}\n",
+        "rf_grid = GridSearchCV(rf, rf_param_grid, cv=5, scoring='accuracy')\n",
+        "rf_grid.fit(X_train_selected, y_train)\n",
+        "print(\"Best RF Parameters:\", rf_grid.best_params_)\n",
+        "print(\"Best RF CV Score:\", rf_grid.best_score_)\n",
+        "\n",
+        "# Evaluate Random Forest\n",
+        "y_pred_rf = rf_grid.predict(X_test_selected)\n",
+        "print(\"Random Forest Test Accuracy:\", accuracy_score(y_test, y_pred_rf))\n",
+        "print(\"Random Forest Classification Report:\")\n",
+        "print(classification_report(y_test, y_pred_rf, target_names=['Control', 'ProbableAD']))\n",
+        "\n",
+        "# Try Logistic Regression\n",
+        "lr = LogisticRegression(class_weight='balanced', random_state=42)\n",
+        "lr_param_grid = {\n",
+        "    'C': [0.01, 0.1, 1, 10],\n",
+        "}\n",
+        "lr_grid = GridSearchCV(lr, lr_param_grid, cv=5, scoring='accuracy')\n",
+        "lr_grid.fit(X_train_selected, y_train)\n",
+        "print(\"Best LR Parameters:\", lr_grid.best_params_)\n",
+        "print(\"Best LR CV Score:\", lr_grid.best_score_)\n",
+        "\n",
+        "# Evaluate Logistic Regression\n",
+        "y_pred_lr = lr_grid.predict(X_test_selected)\n",
+        "print(\"Logistic Regression Test Accuracy:\", accuracy_score(y_test, y_pred_lr))\n",
+        "print(\"Logistic Regression Classification Report:\")\n",
+        "print(classification_report(y_test, y_pred_lr, target_names=['Control', 'ProbableAD']))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q-GLHCpe9H2l",
+        "outputId": "0e2df8ed-bdef-4985-a957-a121770f5965"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Merged features shape: (41, 94)\n",
+            "Dx distribution: Dx\n",
+            "ProbableAD    21\n",
+            "Control       20\n",
+            "Name: count, dtype: int64\n",
+            "Selected features shape: (32, 20)\n",
+            "Best SVM Parameters: {'C': 0.1}\n",
+            "Best SVM CV Score: 0.8428571428571429\n",
+            "SVM Test Accuracy: 0.2222222222222222\n",
+            "SVM Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "     Control       0.29      0.50      0.36         4\n",
+            "  ProbableAD       0.00      0.00      0.00         5\n",
+            "\n",
+            "    accuracy                           0.22         9\n",
+            "   macro avg       0.14      0.25      0.18         9\n",
+            "weighted avg       0.13      0.22      0.16         9\n",
+            "\n",
+            "SVM Cross-Validation Accuracy: Mean = 0.6361111111111111 Std = 0.12832010513834552\n",
+            "Best RF Parameters: {'max_depth': None, 'min_samples_split': 2, 'n_estimators': 50}\n",
+            "Best RF CV Score: 0.7523809523809524\n",
+            "Random Forest Test Accuracy: 0.4444444444444444\n",
+            "Random Forest Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "     Control       0.40      0.50      0.44         4\n",
+            "  ProbableAD       0.50      0.40      0.44         5\n",
+            "\n",
+            "    accuracy                           0.44         9\n",
+            "   macro avg       0.45      0.45      0.44         9\n",
+            "weighted avg       0.46      0.44      0.44         9\n",
+            "\n",
+            "Best LR Parameters: {'C': 1}\n",
+            "Best LR CV Score: 0.8761904761904763\n",
+            "Logistic Regression Test Accuracy: 0.3333333333333333\n",
+            "Logistic Regression Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "     Control       0.33      0.50      0.40         4\n",
+            "  ProbableAD       0.33      0.20      0.25         5\n",
+            "\n",
+            "    accuracy                           0.33         9\n",
+            "   macro avg       0.33      0.35      0.33         9\n",
+            "weighted avg       0.33      0.33      0.32         9\n",
             "\n"
           ]
         }
