--- a/Speech_only.ipynb
+++ b/Speech_only.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKG6qZT+NkowECQAUaR9if",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyNcYxOslm6eAwYPeRtSdNSt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -28,12 +30,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "BgZrtp4B_Ukm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BgZrtp4B_Ukm",
+        "outputId": "a39ed99b-cf86-4da9-f12c-65cc1dc4351c"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Mv7r44t1_aQ8"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
