Step 2: Loading and Preprocessing Datasets

--- a/Speech_only.ipynb
+++ b/Speech_only.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM1PYgpY+stg1pFPJo3Elnn",
+      "authorship_tag": "ABX9TyNNer+Gh/Z81xiGnb6C4Upv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -184,6 +184,15 @@
       },
       "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 2: Loading and Preprocessing Datasets"
+      ],
+      "metadata": {
+        "id": "2uJdBB3vGrTF"
+      }
     }
   ]
 }
