--- a/Speech_only.ipynb
+++ b/Speech_only.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPks6Vj59AwzZH552Q8P4Z9",
+      "authorship_tag": "ABX9TyPYaeeNm7W5eZLmHCuhfslj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -192,6 +192,15 @@
       ],
       "metadata": {
         "id": "2uJdBB3vGrTF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Load Label Files"
+      ],
+      "metadata": {
+        "id": "k9oMdKvoHLpO"
       }
     },
     {
@@ -514,7 +523,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Load Label Files:\n",
+        "## Map Audio Files to Labels"
+      ],
+      "metadata": {
+        "id": "f3fXMu64HM50"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "- task1.csv: ID and AD/Control labels for diagnosis (AD classification).\n",
         "- task2.csv: ID and MMSE scores for regression.\n",
         "- task3.csv: ID and Decline/Non-Decline labels for cognitive decline prediction."
@@ -522,6 +539,15 @@
       "metadata": {
         "id": "LAaPPMh3G_VC"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xjyTeSshHGkH"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
