--- a/Speech_only.ipynb
+++ b/Speech_only.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPYaeeNm7W5eZLmHCuhfslj",
+      "authorship_tag": "ABX9TyPu0UrgGmYqbd48p5KUIkTB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -523,15 +523,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Map Audio Files to Labels"
-      ],
-      "metadata": {
-        "id": "f3fXMu64HM50"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "- task1.csv: ID and AD/Control labels for diagnosis (AD classification).\n",
         "- task2.csv: ID and MMSE scores for regression.\n",
         "- task3.csv: ID and Decline/Non-Decline labels for cognitive decline prediction."
@@ -541,13 +532,61 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Map Audio Files to Labels"
+      ],
+      "metadata": {
+        "id": "f3fXMu64HM50"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Function to map audio files to labels\n",
+        "def load_audio_label_pairs(audio_dir, label_df, label_col, id_col='ID'):\n",
+        "    audio_files = []\n",
+        "    labels = []\n",
+        "    for _, row in label_df.iterrows():\n",
+        "        audio_path = os.path.join(audio_dir, f\"{row[id_col]}.wav\")\n",
+        "        if os.path.exists(audio_path):\n",
+        "            audio_files.append(audio_path)\n",
+        "            labels.append(row[label_col])\n",
+        "    return audio_files, labels\n",
+        "\n",
+        "# AD Classification (Cookie Theft, AD vs CN)\n",
+        "ad_audio_dir = '/content/data/ADReSSo21/diagnosis/train/audio'\n",
+        "ad_audio_files, ad_labels = load_audio_label_pairs(\n",
+        "    ad_audio_dir, task1, 'Dx'\n",
+        ")\n",
+        "\n",
+        "# MMSE Regression (same audio files as AD classification)\n",
+        "mmse_audio_files, mmse_labels = load_audio_label_pairs(\n",
+        "    ad_audio_dir, task2, 'MMSE'\n",
+        ")\n",
+        "\n",
+        "# Cognitive Decline (Category Fluency Task)\n",
+        "prog_audio_dir = '/content/data/ADReSSo21/progression/train/audio'\n",
+        "decline_audio_files, decline_labels = load_audio_label_pairs(\n",
+        "    prog_audio_dir, task3, 'Decline'\n",
+        ")"
+      ],
       "metadata": {
         "id": "xjyTeSshHGkH"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- For AD classification, use ADReSSo21-diagnosis-train.tgz audio files and task1.csv.\n",
+        "- For MMSE regression, use the same audio files as AD classification, paired with task2.csv.\n",
+        "- For cognitive decline, use ADReSSo21-progression-train.tgz audio files and task3.csv"
+      ],
+      "metadata": {
+        "id": "1Wn6XWkaHtU2"
+      }
     }
   ]
 }
