Step 3: Feature Extraction

--- a/Speech_only.ipynb
+++ b/Speech_only.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPu0UrgGmYqbd48p5KUIkTB",
+      "authorship_tag": "ABX9TyMw6Wk1Lr5qTiE5nsBr6AJT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -587,6 +587,34 @@
       "metadata": {
         "id": "1Wn6XWkaHtU2"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Ensure audio files match the IDs in the CSV files. If some IDs are missing audio, you may need to filter them out.\n",
+        "- The segmentation directories contain CSV files with transcriptions or timings, which can be used for linguistic feature extraction."
+      ],
+      "metadata": {
+        "id": "lA_lh77CH75j"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 3: Feature Extraction"
+      ],
+      "metadata": {
+        "id": "Hr2UK4NXIH1f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "p1enQ_wgH01T"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
