update explanation from step 2

--- a/Speech_only.ipynb
+++ b/Speech_only.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMw6Wk1Lr5qTiE5nsBr6AJT",
+      "authorship_tag": "ABX9TyMT3WwmAm3Hv+rLEa65PIzu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -582,20 +582,12 @@
       "source": [
         "- For AD classification, use ADReSSo21-diagnosis-train.tgz audio files and task1.csv.\n",
         "- For MMSE regression, use the same audio files as AD classification, paired with task2.csv.\n",
-        "- For cognitive decline, use ADReSSo21-progression-train.tgz audio files and task3.csv"
-      ],
-      "metadata": {
-        "id": "1Wn6XWkaHtU2"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
+        "- For cognitive decline, use ADReSSo21-progression-train.tgz audio files and task3.csv\n",
         "- Ensure audio files match the IDs in the CSV files. If some IDs are missing audio, you may need to filter them out.\n",
         "- The segmentation directories contain CSV files with transcriptions or timings, which can be used for linguistic feature extraction."
       ],
       "metadata": {
-        "id": "lA_lh77CH75j"
+        "id": "1Wn6XWkaHtU2"
       }
     },
     {
@@ -605,6 +597,19 @@
       ],
       "metadata": {
         "id": "Hr2UK4NXIH1f"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "You need to extract acoustic and linguistic features as specified.\n",
+        "\n",
+        "Acoustic Features\n",
+        "- eGeMAPS: Use opensmile to extract eGeMAPS features.\n",
+        "- Active Data Representation (ADR): This may require a custom implementation or pre-trained model."
+      ],
+      "metadata": {
+        "id": "SwpjjXJTIUY9"
       }
     },
     {
