added explanation about ADR

--- a/Speech_only.ipynb
+++ b/Speech_only.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMT3WwmAm3Hv+rLEa65PIzu",
+      "authorship_tag": "ABX9TyOt96ov0+xXPNNmenTLUZx5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -614,9 +614,53 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import opensmile\n",
+        "import librosa\n",
+        "import numpy as np\n",
+        "\n",
+        "# Initialize opensmile for eGeMAPS\n",
+        "smile = opensmile.Smile(\n",
+        "    feature_set=opensmile.FeatureSet.eGeMAPSv02,\n",
+        "    feature_level=opensmile.FeatureLevel.Functionals\n",
+        ")\n",
+        "\n",
+        "# Function to extract eGeMAPS features from audio\n",
+        "def extract_egemaps(audio_files):\n",
+        "    features = []\n",
+        "    for audio in audio_files:\n",
+        "        y, sr = librosa.load(audio, sr=16000)  # Load audio\n",
+        "        egemaps = smile.process_signal(y, sr)\n",
+        "        features.append(egemaps.values.flatten())\n",
+        "    return np.array(features)\n",
+        "\n",
+        "# Extract eGeMAPS for each task\n",
+        "ad_egemaps = extract_egemaps(ad_audio_files)\n",
+        "mmse_egemaps = extract_egemaps(mmse_audio_files)\n",
+        "decline_egemaps = extract_egemaps(decline_audio_files)"
+      ],
       "metadata": {
         "id": "p1enQ_wgH01T"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- ADR Suggestion:\n",
+        "\n",
+        "ADR typically involves learning representations from raw audio using unsupervised or self-supervised methods. You could use a pre-trained model like wav2vec2 from speechbrain or train a custom model on a larger dataset. For now, we'll proceed with eGeMAPS, but you can explore speechbrain’s Wav2Vec2 for ADR-like features."
+      ],
+      "metadata": {
+        "id": "Z1p8d71PJHb0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0yzylwEMI9ti"
       },
       "execution_count": null,
       "outputs": []
