added explanation about Linguistic Features

--- a/Speech_only.ipynb
+++ b/Speech_only.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOt96ov0+xXPNNmenTLUZx5",
+      "authorship_tag": "ABX9TyP1iy4mDyehzt6qR123HtiG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -654,6 +654,18 @@
       ],
       "metadata": {
         "id": "Z1p8d71PJHb0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Linguistic Features:\n",
+        "<br>\n",
+        "Use Automatic Speech Recognition (ASR) to transcribe audio, then process transcripts in CHAT format for CLAN analysis (MOR, EVAL, FREQ).\n",
+        "We'll use speechbrain’s pre-trained ASR model for transcription."
+      ],
+      "metadata": {
+        "id": "gSzXbKfJJP7i"
       }
     },
     {
