--- a/Speech_only.ipynb
+++ b/Speech_only.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN3OgM7HYGQN/Tdt99kchSy",
+      "authorship_tag": "ABX9TyNdtfd+tgB8GhkzyxCC24+X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2614,6 +2614,34 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Convert to CHAT Format"
+      ],
+      "metadata": {
+        "id": "F1uHDXRKJ3OR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Convert to CHAT Format:\n",
+        "<br> CHAT is a specific format for linguistic analysis. You’ll need to structure the transcripts with metadata (e.g., speaker ID, timestamps). Below is a basic example of saving transcripts in CHAT-like format."
+      ],
+      "metadata": {
+        "id": "EFhrDlvzJ7OY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "u2YxNI7YJrnB"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
