convert to chat format successfully

--- a/Speech_only.ipynb
+++ b/Speech_only.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNdtfd+tgB8GhkzyxCC24+X",
+      "authorship_tag": "ABX9TyM4Pc6cuJ7sGgVfhInZuWsB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2636,11 +2636,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def save_to_chat(transcripts, audio_files, output_dir, task_name):\n",
+        "    os.makedirs(output_dir, exist_ok=True)\n",
+        "    for i, (transcript, audio_file) in enumerate(zip(transcripts, audio_files)):\n",
+        "        chat_file = os.path.join(output_dir, f\"{task_name}_{i}.cha\")\n",
+        "        with open(chat_file, 'w') as f:\n",
+        "            f.write(f\"@Begin\\n\")\n",
+        "            f.write(f\"@Participants: PAR Participant\\n\")\n",
+        "            f.write(f\"@ID: language|corpus|PAR|||||Participant||\\n\")\n",
+        "            f.write(f\"*PAR:\\t{transcript}\\n\")\n",
+        "            f.write(f\"@End\\n\")\n",
+        "\n",
+        "# Save transcripts to CHAT format\n",
+        "save_to_chat(ad_transcripts, ad_audio_files, '/content/chat/ad', 'ad')\n",
+        "save_to_chat(mmse_transcripts, mmse_audio_files, '/content/chat/mmse', 'mmse')\n",
+        "save_to_chat(decline_transcripts, decline_audio_files, '/content/chat/decline', 'decline')"
+      ],
       "metadata": {
         "id": "u2YxNI7YJrnB"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     }
   ]
