--- a/Speech_only.ipynb
+++ b/Speech_only.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM4Pc6cuJ7sGgVfhInZuWsB",
+      "authorship_tag": "ABX9TyMDOVAyGDlMtZ/vCZKB6Bwr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2658,6 +2658,18 @@
       },
       "execution_count": 10,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- CLAN Analysis:\n",
+        "<br>CLAN (Computerized Language Analysis) is typically run locally to extract MOR (morphological), EVAL (evaluation), and FREQ (frequency) features. Since Colab doesn’t support CLAN directly, you can:\n",
+        "Download the .cha files and run CLAN locally.\n",
+        "Alternatively, extract basic linguistic features (e.g., word count, type-token ratio) in Python."
+      ],
+      "metadata": {
+        "id": "cnWGTDlXKbjm"
+      }
     }
   ]
 }
