update the CLAN

--- a/Speech_only.ipynb
+++ b/Speech_only.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMDOVAyGDlMtZ/vCZKB6Bwr",
+      "authorship_tag": "ABX9TyPs4sHAZNDVOxAwPJehZm3O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2664,12 +2664,40 @@
       "source": [
         "- CLAN Analysis:\n",
         "<br>CLAN (Computerized Language Analysis) is typically run locally to extract MOR (morphological), EVAL (evaluation), and FREQ (frequency) features. Since Colab doesn’t support CLAN directly, you can:\n",
-        "Download the .cha files and run CLAN locally.\n",
-        "Alternatively, extract basic linguistic features (e.g., word count, type-token ratio) in Python."
+        "1. Download the .cha files and run CLAN locally.\n",
+        "2. Alternatively, extract basic linguistic features (e.g., word count, type-token ratio) in Python."
       ],
       "metadata": {
         "id": "cnWGTDlXKbjm"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from collections import Counter\n",
+        "import re\n",
+        "\n",
+        "# Basic linguistic feature extraction\n",
+        "def extract_linguistic_features(transcripts):\n",
+        "    features = []\n",
+        "    for transcript in transcripts:\n",
+        "        words = re.findall(r'\\w+', transcript.lower())\n",
+        "        word_count = len(words)\n",
+        "        unique_words = len(set(words))\n",
+        "        ttr = unique_words / word_count if word_count > 0 else 0  # Type-token ratio\n",
+        "        features.append([word_count, unique_words, ttr])\n",
+        "    return np.array(features)\n",
+        "\n",
+        "# Extract linguistic features\n",
+        "ad_linguistic = extract_linguistic_features(ad_transcripts)\n",
+        "mmse_linguistic = extract_linguistic_features(mmse_transcripts)\n",
+        "decline_linguistic = extract_linguistic_features(decline_transcripts)"
+      ],
+      "metadata": {
+        "id": "NFqYP1wqKn8v"
+      },
+      "execution_count": 11,
+      "outputs": []
     }
   ]
 }
