--- a/Alz_Voice.ipynb
+++ b/Alz_Voice.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKG6qZT+NkowECQAUaR9if",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyMyHsJHKBymORFmzmw8KSXp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -28,12 +30,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "7pEuTho-YjVO"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7pEuTho-YjVO",
+        "outputId": "3ae123a2-77aa-48de-a111-3d538d7c91bc"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
     }
   ]
 }
