--- a/Alz_Voice.ipynb
+++ b/Alz_Voice.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMyHsJHKBymORFmzmw8KSXp",
+      "authorship_tag": "ABX9TyPNpkxH728R5URkiyGjL+yA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,20 +30,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7pEuTho-YjVO",
-        "outputId": "3ae123a2-77aa-48de-a111-3d538d7c91bc"
+        "outputId": "60adb802-005f-49cf-da8b-a1b2bd98f345"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ],
@@ -51,6 +51,38 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Define paths"
+      ],
+      "metadata": {
+        "id": "BKPVxEScbTfU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base_path = '/content/drive/MyDrive/ADReSSo21/'\n",
+        "prog_train_path = base_path + 'ADReSSo21-progression-train/'\n",
+        "prog_test_path = base_path + 'ADReSSo21-progression-test/'\n",
+        "diag_train_path = base_path + 'ADReSSo21-diagnosis-train/'"
+      ],
+      "metadata": {
+        "id": "hoLYlTswbLCF"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "iRp7NhQDbQHW"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
