Dataset Organization and Loading

--- a/Alz_Voice.ipynb
+++ b/Alz_Voice.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMEG2RWNn6K2tecRttJyAzZ",
+      "authorship_tag": "ABX9TyOxtOGzp82wyICZperLIOrF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -261,6 +261,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Dataset Organization and Loading"
+      ],
+      "metadata": {
+        "id": "8LBPoCoNdURb"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
@@ -277,6 +286,33 @@
       "metadata": {
         "id": "BKPVxEScbTfU"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "s_CA7MTBdT0s"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-aD7qeS_dTyC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Z3qzVhJfdTvk"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
