Dataset Organization and Loading

--- a/Alz_Voice.ipynb
+++ b/Alz_Voice.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOxtOGzp82wyICZperLIOrF",
+      "authorship_tag": "ABX9TyNNQo6uYojjlDnNq6LtlfXa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -271,7 +271,21 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import tarfile\n",
+        "import os\n",
+        "\n",
+        "data_path = '/content/drive/MyDrive/Voice'\n",
+        "extract_path = '/content/dataset'\n",
+        "\n",
+        "os.makedirs(extract_path, exist_ok=True)\n",
+        "\n",
+        "# Extract all .tgz files\n",
+        "for dataset in ['ADReSSo21-diagnosis-train.tgz', 'ADReSSo21-progression-train.tgz', 'ADReSSo21-progression-test.tgz']:\n",
+        "    tar_path = os.path.join(data_path, dataset)\n",
+        "    with tarfile.open(tar_path, 'r:gz') as tar:\n",
+        "        tar.extractall(extract_path)"
+      ],
       "metadata": {
         "id": "MHO7uLX4c2fZ"
       },
